# MuCoSim

./: CLBM.md  README.md
2D_SHOCK_TUBE/: CMakeLists.txt  input_parameters_ST_1.txt  input_parameters_ST_2.txt  input_parameters_ST_2_SHIFT.txt
2D_SHOCK_TUBE/grid/: gridGen.cpp  state.h
2D_SHOCK_TUBE/src/: auxliray.h  circle.h  grid.h  interpolation.h  inverse.h  lbmkernerls.h  main.cpp  matmul.h  newtonRaphson.h  node.h  state.h
3D_SHOCK_TUBE/: CMakeLists.txt  input_parameters_ST_1.txt  input_parameters_ST_2.txt  input_parameters_ST_2_SHIFT.txt
3D_SHOCK_TUBE/grid/: gridGen.cpp  state.h
3D_SHOCK_TUBE/src/: auxliray.h  boundaryStup.h  circle.h  grid.h  gslinverseNewton.h  interpolation.h  inverse.h  lbmkernerls.h  main.cpp  matmul.h  newtonRaphson.h  node.h
DATA/LIKWID_DATA/: 1127244_CLBM.out  1139737_CLBM.out  1139738_CLBM.out  1139739_CLBM.out  1139740_CLBM.out  1139741_CLBM.out  1139742_CLBM.out
DATA/PRESENTATIONS/PHASE1/: MuCoSimphase1_phase1.pptx
DATA/PRESENTATIONS/PHASE2/: MuCoSimphase2_phase2.pptx
DATA/images/: MuCoSimphase2.pptx
